Fix setting header z-index

--- a/src/components/setting_header/header.scss
+++ b/src/components/setting_header/header.scss
@@ -6,7 +6,7 @@
   left: 0;
   right: 0;
   max-height: $setting-header;
-  z-index: 3;
+  z-index: 4;
   display: flex;
   justify-content: space-between;
   align-items: center;
